Added item filter to shops endpoint
